crates/mockql-core/src/graphql/snapshots/response_merger/disjoint_top_level/mockql_core__graphql__response_merger__tests__response_merger_produces_expected_output@disjoint_top_level__separate_root_fields.json.snap
---
source: crates/mockql-core/src/graphql/response_merger.rs
input_file: crates/mockql-core/src/graphql/snapshots/response_merger/disjoint_top_level/separate_root_fields.json
---
{
  "data": {
    "me": {
      "id": "1",
      "name": "Ada"
    },
    "topProducts": [
      {
        "upc": "1",
        "name": "Widget"
      }
    ]
  }
}
